# ed_tech

./: .gitignore
backend/: README.md  alembic.ini  config.py  database.py  main.py  mock.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 53bd5ec48fc2_.py  a92938a1e304_.py  e6475c93bf82_.py
backend/events/: models.py  routes.py  schemas.py
backend/open/: calls.py  client.py  dummy.py  routes.py
backend/pomodoro/: models.py  routes.py  schemas.py
backend/questions/: models.py  routes.py  schemas.py
backend/users/: auth.py  models.py  permissions.py  routes.py  schemas.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/achievements/: page.tsx
frontend/src/app/calendar/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/learning/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/quiz/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/shop/: page.tsx
frontend/src/components/: MantineWrapper.tsx  OverviewCards.tsx  PomodoroTimer.tsx  Progress.tsx  ProtectedRoute.tsx  SessionCalendar.tsx  Sidebar.tsx  UserMenu.tsx
frontend/src/components/calendar/: CalendarStyles.css  EventCalendar.tsx
frontend/src/contexts/: authContext.tsx
frontend/src/utils/: api.ts
